--- a/MentalCrosswind/Base.lproj/Main.storyboard
+++ b/MentalCrosswind/Base.lproj/Main.storyboard
@@ -16,19 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iJu-A8-IT5">
-                                <rect key="frame" x="252" y="89" width="97" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iJu-A8-IT5">
+                                <rect key="frame" x="252" y="48" width="97" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Runway" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fuV-FR-fO8">
-                                <rect key="frame" x="75" y="89" width="60" height="21"/>
+                                <rect key="frame" x="75" y="54" width="60" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xHy-Ps-9TZ">
-                                <rect key="frame" x="157" y="147" width="100" height="31"/>
+                                <rect key="frame" x="157" y="90" width="100" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Wind check"/>
                                 <connections>
@@ -36,33 +36,55 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jl6-ux-3vG" customClass="HeadingIndicatorView" customModule="MentalCrosswind" customModuleProvider="target">
-                                <rect key="frame" x="48" y="209" width="316" height="246"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="5" y="136" width="404" height="485"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="Jl6-ux-3vG" secondAttribute="height" multiplier="158:123" id="Tqq-jm-DTf"/>
+                                    <constraint firstAttribute="width" secondItem="Jl6-ux-3vG" secondAttribute="height" multiplier="1:1.2" id="Tqq-jm-DTf"/>
                                 </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="HfE-Gz-5HO" appends="YES" id="WiS-hm-yVe"/>
+                                    <outletCollection property="gestureRecognizers" destination="efG-3p-aIC" appends="YES" id="2OU-5U-Zvj"/>
+                                    <outletCollection property="gestureRecognizers" destination="BTF-Sa-gsM" appends="YES" id="iOL-LA-hae"/>
+                                </connections>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jl6-ux-3vG" secondAttribute="trailing" constant="50" id="A61-Lj-iVv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jl6-ux-3vG" secondAttribute="trailing" constant="5" id="A61-Lj-iVv"/>
                             <constraint firstItem="iJu-A8-IT5" firstAttribute="firstBaseline" secondItem="fuV-FR-fO8" secondAttribute="firstBaseline" id="KVq-jH-kec"/>
                             <constraint firstItem="iJu-A8-IT5" firstAttribute="leading" secondItem="fuV-FR-fO8" secondAttribute="trailing" constant="117" id="KbW-Pa-ex5"/>
-                            <constraint firstItem="Jl6-ux-3vG" firstAttribute="top" secondItem="xHy-Ps-9TZ" secondAttribute="bottom" constant="31" id="Wjq-8v-Qus"/>
-                            <constraint firstItem="xHy-Ps-9TZ" firstAttribute="top" secondItem="fuV-FR-fO8" secondAttribute="bottom" constant="37" id="XfT-fm-Bsc"/>
+                            <constraint firstItem="Jl6-ux-3vG" firstAttribute="top" secondItem="xHy-Ps-9TZ" secondAttribute="bottom" constant="15" id="Wjq-8v-Qus"/>
+                            <constraint firstItem="xHy-Ps-9TZ" firstAttribute="top" secondItem="fuV-FR-fO8" secondAttribute="bottom" constant="15" id="XfT-fm-Bsc"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iJu-A8-IT5" secondAttribute="trailing" constant="65" id="Yep-Od-xoB"/>
-                            <constraint firstItem="Jl6-ux-3vG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="48" id="apD-pG-Bgo"/>
-                            <constraint firstItem="fuV-FR-fO8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="45" id="god-Nx-j70"/>
+                            <constraint firstItem="Jl6-ux-3vG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="apD-pG-Bgo"/>
+                            <constraint firstItem="fuV-FR-fO8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="god-Nx-j70"/>
                             <constraint firstItem="fuV-FR-fO8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="nra-t5-Q7F"/>
                             <constraint firstItem="xHy-Ps-9TZ" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="vmJ-2w-G3C"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="headingIndicatorView" destination="Jl6-ux-3vG" id="egz-qP-HpB"/>
                         <outlet property="runwayTextField" destination="iJu-A8-IT5" id="CDo-gy-UHv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="HfE-Gz-5HO">
+                    <connections>
+                        <action selector="handlePan:" destination="BYZ-38-t0r" id="P1X-4A-eFD"/>
+                    </connections>
+                </panGestureRecognizer>
+                <tapGestureRecognizer id="efG-3p-aIC">
+                    <connections>
+                        <action selector="handleTap:" destination="BYZ-38-t0r" id="BR7-Qp-udf"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <rotationGestureRecognizer id="BTF-Sa-gsM">
+                    <connections>
+                        <action selector="handleRotation:" destination="BYZ-38-t0r" id="4DF-xx-VGs"/>
+                    </connections>
+                </rotationGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="89.732142857142847"/>
         </scene>
@@ -70,6 +92,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
