--- a/MentalCrosswind/Base.lproj/Main.storyboard
+++ b/MentalCrosswind/Base.lproj/Main.storyboard
@@ -139,16 +139,16 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="gM8-db-8R0">
-                                                        <rect key="frame" x="0.0" y="100" width="92" height="50"/>
+                                                        <rect key="frame" x="0.0" y="100" width="128" height="50"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="75%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UD2-MT-Dot">
-                                                                <rect key="frame" x="0.0" y="0.0" width="46" height="50"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="64" height="50"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50 deg" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3qX-hv-x9W" userLabel="Cross Wind Runway Offset Label">
-                                                                <rect key="frame" x="46" y="0.0" width="46" height="50"/>
+                                                                <rect key="frame" x="64" y="0.0" width="64" height="50"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -157,6 +157,7 @@
                                                     </stackView>
                                                 </subviews>
                                                 <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="gM8-db-8R0" secondAttribute="trailing" id="6pA-su-jtk"/>
                                                     <constraint firstItem="Cpz-sP-uDa" firstAttribute="leading" secondItem="cni-nE-7fI" secondAttribute="leading" id="A1W-87-brx"/>
                                                     <constraint firstAttribute="trailing" secondItem="Cpz-sP-uDa" secondAttribute="trailing" id="fHg-Le-an3"/>
                                                 </constraints>
