--- a/MentalCrosswind/Base.lproj/Main.storyboard
+++ b/MentalCrosswind/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Practice"/>
                                         <connections>
-                                            <action selector="practiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4c8-Kj-yXu"/>
+                                            <action selector="practiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZGf-OQ-8sL"/>
                                         </connections>
                                     </button>
                                 </subviews>
